--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: Poppins;
+  box-sizing: border-box;
+  outline: none;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2c4e80;
+}
+
+*::selection {
+  background-color: #6358dc;
+  color: white;
+}
