--- a/src/components/template.css
+++ b/src/components/template.css
@@ -121,23 +121,22 @@ form {
 }
 
 .headerLogo {
-  width: 30%;
+  width: 15%;
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   font-weight: bold;
   cursor: pointer;
-  padding: 5px;
 }
 
 .logo {
-  width: 50%;
-  height: 80%;
+  width: 55%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 10px;
+  padding: 10px;
 }
 
 .logo img {
@@ -160,7 +159,8 @@ form {
   align-items: center;
 }
 
-.cuerpoArribaTexto {
+.cuerpoArribaTexto h1 {
+  font-size: 22px;
 }
 
 .cuerpoAbajo {
@@ -203,7 +203,7 @@ form {
   justify-content: flex-start;
   overflow-x: auto;
   padding-bottom: 15px;
-  margin-left: 20px;
+  margin-left: 90px;
   margin-right: 20px;
 }
 
@@ -262,8 +262,8 @@ form {
 }
 
 .profilePhoto {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   padding: 5px;
 }
@@ -286,7 +286,7 @@ form {
   align-items: center;
   gap: 30px;
   background-color: #00215e;
-  width: 60%;
+  width: 75%;
   height: 100%;
   justify-content: flex-end;
 }
