--- a/src/components/template.css
+++ b/src/components/template.css
@@ -791,3 +791,33 @@ form {
 .ellipsis {
   color: white;
 }
+
+/* Estilos mejorados para el filtro de amigos */
+.friends-filter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+  padding: 5px 0;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  user-select: none;
+  color: white;
+  font-size: 1rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.friends-checkbox {
+  margin-right: 8px;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  vertical-align: middle;
+}
