--- a/src/components/template.css
+++ b/src/components/template.css
@@ -7,6 +7,8 @@
   font-family: Poppins;
   box-sizing: border-box;
   outline: none;
+  scrollbar-width: none !important; /* Firefox */
+  -ms-overflow-style: none !important; /* IE y Edge */
 }
 
 *::selection {
